# respect

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  codex-config-example.toml
respect_mcp/: LICENSE  NOTICE  README.md  pyproject.toml  setup-respect-mcp.sh
respect_mcp/instructions/: acceptance-test.md  architecture-review-prd.md  architecture-summary.md  detect-project-state.md  execute-task.md  generate-prd.md  generate-taskprd-failed-test.md  generate-taskprd.md  respect-master.md  review-prd-complete.md  setup-prd-tests.md
respect_mcp/respect_manager/: __init__.py  artifact_header_manager.py  artifact_index_manager.py  artifact_managed_header_items.json  artifact_manager.py  artifact_statuses.json  artifact_type_handler.py  artifact_type_manager.py  artifact_types.json  template_manager.py
respect_mcp/respect_mcp_server/: __init__.py  server.py
respect_mcp/templates/ASD/: template.md
respect_mcp/templates/PRD/: template.md
respect_mcp/templates/SACC/: template.md
respect_mcp/templates/TASKPRD/: template.md
respect_mcp/templates/UACC/: template.md
